# Ecommerce_dashboard

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Oct_2019.pkl  Procfile  README.md  ecom.py  pyproject.toml  requirements.txt  setup.sh
analytics/: aggregations.py  basket.py  brand_eval.py  clv.py  cohort.py  funnel.py  kpi.py  markov.py  rfm.py  timeseries.py
assets/: google_analytics.html  styles.css
charts/: chartjs_backend.py  palettes.py  plotly_backend.py  port.py
components/: add_ga.py  charts.py  contact_form.py  data_loader.py  style.css
data/: Oct_2019.parquet  cart_by_user_cat.pkl  category_summary_part_100.csv  category_summary_part_101.csv  category_summary_part_102.csv  category_summary_part_103.csv  category_summary_part_104.csv  category_summary_part_236.csv  category_summary_part_237.csv  category_summary_part_238.csv  category_summary_part_239.csv  category_summary_part_240.csv  category_summary_part_241.csv  category_summary_part_242.csv  category_summary_part_243.csv  category_summary_part_244.csv  category_summary_part_245.csv  category_summary_part_246.csv  category_summary_part_247.csv  category_summary_part_248.csv  category_summary_part_249.csv  category_summary_part_250.csv  category_summary_part_251.csv  category_summary_part_252.csv  category_summary_part_253.csv  category_summary_part_254.csv  category_summary_part_255.csv  category_summary_part_256.csv  category_summary_part_257.csv  category_summary_part_258.csv  category_summary_part_259.csv  category_summary_part_260.csv  category_summary_part_261.csv  category_summary_part_288.csv  category_summary_part_289.csv  category_summary_part_290.csv  category_summary_part_291.csv  (+50 more)
(+49 files in other folders)
