[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-dashboard"
version = "0.2.0"
description = "Streamlit + DuckDB e-commerce marketing analytics dashboard."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Islam Ibrahim" }]
license = { text = "Proprietary" }

dependencies = [
    "streamlit==1.34.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "plotly==5.22.0",
    "statsmodels>=0.14.4,<0.15",
    "duckdb==1.1.3",
    "pyarrow==17.0.0",
    "mlxtend==0.23.1",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.6.9",
]

[project.urls]
Repository = "https://github.com/IslamIbrahimAIM/Ecommerce_dashboard"

# ----- Packaging -----------------------------------------------------------
# This is an application, not a library, but we still package it so
# `pip install .` resolves dependencies cleanly. Tests/scripts/assets are
# not shipped as installable packages.
[tool.setuptools]
packages = ["analytics", "charts", "data", "infra", "ui", "ui.tabs", "ui.components"]

# ----- Tooling -------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
